style fix: background color covers all content, not only viewport height

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
   background-color: #ebeff3;
-
+  min-height: 100vh;
+  height: auto;
+  padding-bottom: 4em;
 }
 
 
